# slack-bot

./: .env.example  .gitignore  README  pyproject.toml
slack_bot/: app_home.py  main.py  message.py
